Edited Github Page
Edited Github Page

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -183,7 +183,7 @@ header h1 {
   color: #ece4d8;
   text-align: center;
   line-height:1;
-  padding: 14px 20px 0;
+  padding: 9px 20px 13px;
 }
 
 header h2 {
